--- a/style.css
+++ b/style.css
@@ -40,11 +40,21 @@ img {
 }
 
 h3 {
-  font-size: 5rem;
+  font-size: 4rem;
   display: flex;
-  align-items: center;
-  justify-content: start;
-  font-weight: 500;
+  font-weight: 550;
   color: #333;
   margin-bottom: 1rem;
+  padding: 10px;
+}
+
+result {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #333;
+  margin-top: 1rem;
+  padding: 0px;
 }
